# cds-bstree-file-readonly-rust

./: CHANGELOG.md  Cargo.toml  README.md
resources/tests/: mkfile.bash  mkseq.bash
src/: bstree.rs  float.rs  lib.rs  mk.rs  rw.rs  visitors.rs
src/cliargs/: colargs.rs  coltypeargs.rs  csvargs.rs  memsize.rs  mkargs.rs  mod.rs  mode.rs
tests/: example.bash  t1.bash
